--- a/src/app/modules/dashboard/pages/overview-latam/overview-latam.component.html
+++ b/src/app/modules/dashboard/pages/overview-latam/overview-latam.component.html
@@ -231,7 +231,7 @@
                             </div>
                         </div>
 
-                        <div class="period-popover" ngbDropdown>
+                        <!-- <div class="period-popover" ngbDropdown>
                             <a ngbDropdownToggle>
                                 <i class="fas fa-question-circle"></i>
                             </a>
@@ -244,7 +244,7 @@
                                     <span>{{ serie.period }}</span>
                                 </li>
                             </div>
-                        </div>
+                        </div> -->
 
                         <app-chart-line-series [series]="usersAndSalesByMetric"
                             [valueName]="selectedTab3 === 1 ? 'Usuarios' : 'Ventas'"
