--- a/src/app/modules/users-mngmt/pages/users/users.component.html
+++ b/src/app/modules/users-mngmt/pages/users/users.component.html
@@ -1,12 +1,12 @@
 <div class="main-container mt-4">
     <!-- invitations -->
-    <div *ngIf="getReqSatus > 1" class="mb-4">
+    <div *ngIf="getReqSatus > 1">
         <div class="row">
             <div class="col-12" *ngIf="invitations?.length > 0 || getReqSatus === 3">
-                <p class="text-uppercase text-muted mb-4"><b>Invitaciones enviadas</b></p>
+                <p class="h3 mb-4 text-muted">Invitaciones enviadas</p>
             </div>
 
-            <div class="col-12 mb-4" *ngIf="invitations?.length > 0">
+            <div class="col-12 mb-5" *ngIf="invitations?.length > 0">
                 <app-invitation *ngFor="let invitation of invitations" [invitation]="invitation"
                     (invitationDeleted)="getInvitations()"></app-invitation>
             </div>
@@ -14,10 +14,10 @@
 
         <!-- error message -->
         <div class="row" *ngIf="getReqSatus === 3">
-            <div class="col-12">
+            <div class="col-12 mb-5">
                 <div class="card">
                     <div class="card-body">
-                        <p class="text-danger text-center mb-0">
+                        <p class="text-muted text-center mb-0">
                             Se generó un error al consultar las invitaciones enviadas
                         </p>
                     </div>
@@ -26,7 +26,11 @@
         </div>
     </div>
 
-    <p class="text-uppercase text-muted my-4"><b>Administar usuarios</b></p>
+    <div class="row">
+        <div class="col-12">
+            <p class="h2 mb-5 text-xl">Administar usuarios</p>
+        </div>
+    </div>
     <!-- invite new user button -->
     <div class="row">
         <div class="col-12 mb-4 text-right">
