--- a/src/app/modules/settings/pages/user-profile/user-profile.component.html
+++ b/src/app/modules/settings/pages/user-profile/user-profile.component.html
@@ -4,44 +4,53 @@
     </div>
 </div>
 
-<!-- avatarUrl {{avatarUrl}}
-<br><br><br> -->
 <div class="row">
     <div class="col-xl-4 order-xl-2 mb-5 mb-xl-0">
         <div class="card card-profile shadow height-fluid">
             <div class="row justify-content-center">
-                <div class="col-lg-3 order-lg-2">
+                <div class="col-lg-12 order-lg-2">
                     <div class="card-profile-image">
-                        <a href="javascript:void(0)">
-                            <img *ngIf="avatarUrl" [src]="avatarUrl" class="rounded-circle">
-                        </a>
+                        <!-- without avatar image -->
+                        <div *ngIf="!avatarUrl" class="avatar-container default">
+                            <i class="ni ni-single-02"></i>
+                        </div>
+
+                        <!-- with avatar image -->
+                        <div *ngIf="avatarUrl" class="avatar-container">
+                            <img [src]="avatarUrl">
+                        </div>
+
+                        <!-- loader -->
+                        <div *ngIf="file?.status === 'loading'" class="loading-shade">
+                            <mat-spinner></mat-spinner>
+                        </div>
                     </div>
                 </div>
             </div>
-            <!-- <div class="card-header text-center border-0 pt-8 pt-md-4 pb-0 pb-md-4">
-                <div class="d-flex justify-content-center">
-                    <a href="javascript:void(0)" class="btn btn-sm btn-primary">Subir imagen</a>
-                </div>
-            </div> -->
+
             <div class="card-body pt-0 pt-9">
                 <div class="row">
                     <div class="col-12">
                         <div class="file-status text-center mb-4">
-                            <!-- <progress *ngIf="file?.status === 'loading'"
-                                [ngClass]="{'completed': file?.progress === 100}" max="100"
-                                [value]="file?.progress"></progress> -->
-
+                            <!-- selected file name -->
                             <small *ngIf="file?.name && file?.status !== 'loaded'" class="text-muted mb-2">
                                 {{ file.name }}
                             </small>
 
+                            <!-- invalid file -->
+                            <small *ngIf="file?.status === 'invalid'" class="text-danger">
+                                Formato de imágen inválido <br>
+                                (debe de ser un .png, .jpg o .jpeg)
+                            </small>
+
+                            <!-- uploading error -->
                             <small *ngIf="file?.status === 'failed'" class="text-danger">
                                 Error al subir la imagen
                             </small>
 
-                            <small *ngIf="file?.status === 'invalid'" class="text-danger">
-                                Formato de imágen inválido <br>
-                                (debe de ser un .png, .jpg o .jpeg)
+                            <!-- uploading success -->
+                            <small *ngIf="file?.status === 'loaded'" class="text-success">
+                                Imagen de perfil actualizada
                             </small>
                         </div>
 
@@ -68,7 +77,7 @@
         </div>
     </div>
     <div class="col-xl-8 order-xl-1">
-        <div class="card shadow">
+        <div class="card shadow height-fluid">
             <div class="card-body">
                 <form role="form" [formGroup]="form">
                     <div class="pl-lg-4">
