--- a/src/app/components/navbar/navbar.component.html
+++ b/src/app/components/navbar/navbar.component.html
@@ -1,9 +1,7 @@
 <nav class="navbar navbar-expand-md sticky-top navbar-dark bg-primary " id="navbar-main">
-  <!-- navbar navbar-top navbar-expand-md navbar-dark sticky-top -->
   <div class="container-fluid">
     <!-- Brand -->
     <a class="h4 mb-0 text-white text-uppercase d-lg-inline-block" routerLinkActive="active">
-      <!-- {{ customTitle ? customTitle + (customSubtitle ? ' - ' + customSubtitle : '') : getTitleByRoute() }} -->
       {{ customTitle ? customTitle + (customSubtitle ? ' - ' + customSubtitle : '') : '' }}
     </a>
     <!-- User -->
@@ -11,11 +9,20 @@
       <li class="nav-item" ngbDropdown placement="bottom-right">
         <a class="nav-link pr-0" role="button" ngbDropdownToggle>
           <div class="media align-items-center">
-            <!-- <span class="avatar avatar-sm rounded-circle"> -->
-            <!-- <img alt="Image placeholder" src="assets/img/theme/team-4-800x800.jpg"> -->
-            <i class="ni ni-single-02"></i>
-            <div class="media-body ml-2 d-none d-lg-block">
 
+            <!-- user avatar -->
+            <div class="user-image">
+              <!-- without avatar -->
+              <i *ngIf="!user?.avatar_url || userAvatarUrlBroken" class="ni ni-single-02"></i>
+
+              <!-- with avatar -->
+              <div *ngIf="user?.avatar_url && !userAvatarUrlBroken" class="avatar-container">
+                <img [src]="user.avatar_url" (error)="userAvatarUrlBroken = true">
+              </div>
+            </div>
+
+            <!-- user name -->
+            <div class="media-body ml-2 d-none d-lg-block">
               <span class="mb-0 text-sm font-weight-bold">
                 {{ user?.first_name ? (user?.first_name + ' ' + user?.last_name) : user?.email }}
               </span>
