--- a/src/app/components/navbar/navbar.component.scss
+++ b/src/app/components/navbar/navbar.component.scss
@@ -1,3 +1,25 @@
-.dropdown-item {
-    cursor: pointer;
+#navbar-main {
+    height: 64px;
+
+    .avatar-container {
+        background-color: #F8F9FE;
+        border-radius: 50%;
+        height: 35px;
+        width: 35px;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+    }
+
+    .user-image {
+        img {
+            border-radius: 50px;
+            height: 35px;
+            width: 35px;
+        }
+    }
+
+    .dropdown-item {
+        cursor: pointer;
+    }
 }
