update multiple-tabs-selector component

--- a/src/app/modules/dashboard/components/multiple-tabs-selector/multiple-tabs-selector.component.scss
+++ b/src/app/modules/dashboard/components/multiple-tabs-selector/multiple-tabs-selector.component.scss
@@ -1,6 +1,10 @@
 .multiple-tabs-container {
     width: 100%;
 
+    li {
+        cursor: pointer;
+    }
+
     .pills-container {
         width: 60%;
     
