--- a/src/app/modules/dashboard/components/multiple-tabs-selector/multiple-tabs-selector.component.html
+++ b/src/app/modules/dashboard/components/multiple-tabs-selector/multiple-tabs-selector.component.html
@@ -4,13 +4,14 @@
             <li class="nav-item mb-2">
                 <a *ngIf="showAllSelectedTab" class="nav-link p-2" [ngClass]="{'active': allSelectedTab}"
                     (click)="allSelectedTab = true; selectedTab($event); selectedTabs=[]">
-                    {{ 'others.all' | translate | titlecase }}
+                    {{ (allSelectedTabText === 'male' ? 'others.allPluralM' : 'others.allPluralF') | translate |
+                    titlecase }}
                 </a>
             </li>
             <li class="nav-item mb-2" *ngFor="let item of tabList">
                 <a class="nav-link p-2" [ngClass]="{'active': selectedTabs?.includes(item.id) && !allSelectedTab}"
                     (click)="allSelectedTab = false; selectedTab($event, item)">
-                    {{ item.id }} - {{ item.name }}
+                    {{ item.name }}
                 </a>
             </li>
         </ul>
